[gd_scene load_steps=8 format=3 uid="uid://dgk8lnvkgq4fl"]

[ext_resource type="Theme" uid="uid://b518a15p4qy0m" path="res://assets/UI/pc_components.tres" id="1_j7c43"]
[ext_resource type="Script" uid="uid://dgaa22cubaed4" path="res://main/escape_screen.gd" id="1_mtg5q"]
[ext_resource type="Script" uid="uid://64yrohmth67e" path="res://main/my_button.gd" id="3_ecdmd"]
[ext_resource type="Texture2D" uid="uid://ck2cj17jqek5x" path="res://assets/UI/audio-on.png" id="4_jyktp"]
[ext_resource type="Texture2D" uid="uid://cdwuq23satojg" path="res://assets/UI/audio-off.png" id="5_02wmy"]
[ext_resource type="Texture2D" uid="uid://yyutvljfg6l4" path="res://assets/UI/music-on.png" id="6_kjvo0"]
[ext_resource type="Texture2D" uid="uid://cb26s580plvv6" path="res://assets/UI/music-off.png" id="7_updt0"]

[node name="escape_screen" type="CanvasLayer"]
layer = 3
script = ExtResource("1_mtg5q")

[node name="background" type="ColorRect" parent="."]
offset_right = 480.0
offset_bottom = 270.0
color = Color(0.321569, 0.282353, 0.223529, 0.545098)

[node name="sort" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.0
offset_top = -26.5
offset_right = 57.0
offset_bottom = 26.5
grow_horizontal = 2
grow_vertical = 2

[node name="warning" type="Label" parent="sort"]
layout_mode = 2
theme = ExtResource("1_j7c43")
theme_override_colors/font_color = Color(0.901961, 0.807843, 0.67451, 1)
text = "your progress will NOT be saved.
Are you sure you want to exit?"
horizontal_alignment = 1

[node name="exit" type="Button" parent="sort"]
layout_mode = 2
theme = ExtResource("1_j7c43")
text = "exit"
script = ExtResource("3_ecdmd")
metadata/_custom_type_script = "uid://64yrohmth67e"

[node name="cancel" type="Button" parent="sort"]
layout_mode = 2
theme = ExtResource("1_j7c43")
text = "cancel"
script = ExtResource("3_ecdmd")
metadata/_custom_type_script = "uid://64yrohmth67e"

[node name="audio" type="TextureButton" parent="."]
offset_left = 27.0
offset_top = 3.0
offset_right = 49.0
offset_bottom = 23.0
toggle_mode = true
texture_normal = ExtResource("4_jyktp")
texture_pressed = ExtResource("5_02wmy")

[node name="music" type="TextureButton" parent="."]
offset_left = 3.0
offset_top = 3.0
offset_right = 25.0
offset_bottom = 23.0
toggle_mode = true
texture_normal = ExtResource("6_kjvo0")
texture_pressed = ExtResource("7_updt0")

[connection signal="mouse_entered" from="sort/exit" to="sort/exit" method="_on_mouse_entered"]
[connection signal="pressed" from="sort/exit" to="." method="_on_exit_pressed"]
[connection signal="mouse_entered" from="sort/cancel" to="sort/cancel" method="_on_mouse_entered"]
[connection signal="pressed" from="sort/cancel" to="." method="_on_cancel_pressed"]
[connection signal="mouse_entered" from="audio" to="." method="_on_audio_mouse_entered"]
[connection signal="toggled" from="audio" to="." method="_on_audio_toggled"]
[connection signal="mouse_entered" from="music" to="." method="_on_music_mouse_entered"]
[connection signal="toggled" from="music" to="." method="_on_music_toggled"]
